--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsc && node ./dist/index.ts",
+    "start": "ts-node src/index.ts",
     "build": "hardhat compile",
     "deploy_esdt":"tsc && node ./dist/deploy_esdt.js"
   },
@@ -20,11 +20,10 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.12",
+    "@types/sinon-chai": "^3.2.9",
     "bn.js": "^5.2.0",
     "chai": "^4.3.4",
-    "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.4",
     "mocha": "^9.1.3",
     "solc": "^0.8.10",
     "solhint": "^3.3.6",
